feat: Return QRCode link on sign in. Remove qrStore method.
